# arsenalbookclub

./: CNAME  LICENSE  README.md  about.html  arsenal_styles.css  index.html  latest.html  main.js  members.html  responsive.css
api/: pyproject.toml
api/app/: main.py  script.py
app/: package-lock.json  package.json  pnpm-lock.yaml
app/src/: app.css
app/src/routes/: +page.svelte  Header.svelte
app/src/routes/info/: +page.server.ts  +page.svelte  +page.ts
docs/: Bill 1.docx
