[project]
name = "api"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "DoctorBear-it", email = "DoctorBear-it@users.noreply.github.com"}]
requires-python = ">= 3.11"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
api = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
fastapi = ">=0.111.0,<0.112"
